--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "giphy-mixmax-app",
-  "version": "0.0.1",
-  "description": "Giphy App for Mixmax",
+  "name": "txid-slash-command",
+  "private": true,
+  "version": "0.0.0",
+  "description": "txid slash command for Mixmax",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mixmaxhq/giphy-mixmax-app.git"
+    "url": "git://github.com/freewil/txid-slash-command"
   },
   "author": "Chanpory Rith <chanpory@mixmax.com> (https://mixmax.com/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mixmaxhq/giphy-mixmax-app/issues"
+    "url": "https://github.com/freewil/txid-slash-command/issues"
   },
-  "homepage": "https://github.com/mixmaxhq/giphy-mixmax-app",
+  "homepage": "https://github.com/freewil/txid-slash-command",
   "dependencies": {
     "body-parser": "^1.12.2",
     "cors": "^2.7.1",
     "express": "^4.12.3",
+    "graphviz": "0.0.8",
     "request": "^2.64.0",
-    "synchronize": "^0.9.14",
-    "underscore": "^1.8.3"
+    "synchronize": "^0.9.14"
   },
   "devDependencies": {
     "nodemon": "^1.7.1"
